*SVN*

* Improve routes documentation.  #7095 [zackchandler]

* mail_to :encode => 'hex' also encodes the mailto: part of the href attribute as well as the linked email when no name is given.  #2061 [Jarkko Laine, pfc.pille@gmx.net]

* Resource member routes require :id, eliminating the ambiguous overlap with collection routes.  #7229 [dkubb]

* Remove deprecated assertions.  [Jeremy Kemper]

* Change session restoration to allow namespaced models to be autoloaded. Closes #6348. [Nicholas Seckar]

* Fix doubly appearing parameters due to string and symbol mixups. Closes #2551. [aeden]

* Fix overly greedy rescues when loading helpers. Fixes #6268. [Nicholas Seckar]

* Fixed NumberHelper#number_with_delimiter to use "." always for splitting the original number, not the delimiter parameter #7389 [ceefour]

* Autolinking recognizes trailing and embedded . , : ;  #7354 [Jarkko Laine]

* Make TextHelper::auto_link recognize URLs with colons in path correctly, fixes #7268.  [imajes]

* Update to script.aculo.us 1.7.0.  [Thomas Fuchs]

* Modernize cookie testing code, and increase coverage (Heckle++) #7101 [Kevin Clark]

* Improve Test Coverage for ActionController::Routing::Route#matches_controller_and_action? (Heckle++) #7115 [Kevin Clark]

* Heckling ActionController::Resources::Resource revealed that set_prefixes didn't break when :name_prefix was munged. #7081 [Kevin Clark]

* Fix #distance_of_time_in_words to report accurately against the Duration class.  #7114 [eventualbuddha]

* Refactor #form_tag to allow easy extending.  [Rick]

* Update to Prototype 1.5.0. [Sam Stephenson]

* RecordInvalid, RecordNotSaved => 422 Unprocessable Entity, StaleObjectError => 409 Conflict.  #7097 [dkubb]

* Allow fields_for to be nested inside form_for, so that the name and id get properly constructed [Jamis Buck]

* Allow inGroupsOf and eachSlice to be called through rjs. #7046 [Cody Fauser]

* Allow exempt_from_layout :rhtml.  #6742, #7026 [dcmanges, Squeegy]
